# door2door

./: .gitignore  Makefile  README.md
credentials/: sa-gcp-key.json
ingestion/: Dockerfile.local  local_execution.sh  main.py  requirements.txt
transformation/: Dockerfile  Makefile  dbt_project.yml  docker-compose.yml  docker-entrypoint.sh  packages.yml  profiles.prod.yml  profiles.yml  pyproject.toml
transformation/analysis/: avg_distance_traveled_by_vehicles_operating.sql
transformation/infra/: deploy.yml
transformation/macros/override/: generate_schema_name.sql
transformation/models/gold/: vehicle_operations_metrics.sql  vehicle_operations_metrics.yml
transformation/models/silver/: operating_period_events.sql  operating_period_events.yml  vehicle_events.sql  vehicle_events.yml  vehicle_update_events.sql  vehicle_update_events.yml
transformation/models/sources/: bronze.yml
