[tool.poetry]
name = "door2door-elt"
version = "0.1.0"
description = "dbt Project for the Door2door ELT Pipeline"
authors = ["samuel <favarin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dbt-bigquery = {version = "^1.3.0", optional = true}
re-data = {version = "^0.10.1", optional = true}
psycopg = {version = "^3.0.16", optional = true}
python-dotenv = {version = "^0.19.2", optional = true}
setuptools = {version = "^67.4.0", optional = true}
typer = {version = "^0.4.1", optional = true}

[tool.poetry.extras]
dbt = [
    "dbt-bigquery",
    "re-data"
]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

